# latexbuild

./: build_readme.py  pyproject.toml  setup.py
examples/: build.py
latexbuild/: __init__.py  assertions.py  build.py  jinja2_extension.py  latex_parse.py  subprocess_extension.py  utils.py
src/latexbuild/: __init__.py  assertions.py  build.py  subprocess_extension.py  utils.py
tests/: test_assertions.py  test_jinja2_extension.py  test_latex_parse.py  test_subprocess_extension.py  test_utils.py
